shell/sass/gnome-shell/_common.scss
/* ... */
.message {
  // No need to set any height/min-height with fixed values,
  // 'no-values' can keep its height automatically even
  // if switched to scrolled-view mode.
  // So only padding property seems enough to control the spacing.
  padding: 6px;
  border-radius: 0;
  background-color: $semi_fill_color;
  color: $secondary_fg_color;

  .popup-menu & {
    &:ltr { box-shadow: inset 4px 0 $semi_fill_color; }
    &:rtl { box-shadow: inset -4px 0 $semi_fill_color; }

    &:hover,
    &:focus {
      background-color: $accent_fill_color;
      color: $fg_color;
      &:ltr { box-shadow: inset 4px 0 $secondary_accent_color; }
      &:rtl { box-shadow: inset -4px 0 $secondary_accent_color; }
    }
    &:active {
      background-color: $accent_active_fill_color;
      color: $fg_color;
      &:ltr { box-shadow: inset 4px 0 $accent_color; }
      &:rtl { box-shadow: inset -4px 0 $accent_color; }
    }
  }

  &-icon-bin {
    &:ltr { padding: 3px 0 3px 6px; }
    &:rtl { padding: 3px 6px 3px 0; }

    > StIcon {
      color: $secondary_fg_color;
      // this size is related to 'cover-image' of media-control,
      // so keep larger than 24px or more...
      icon-size: 32px;
      -st-icon-style: symbolic;
    }
  }

  &-secondary-bin {
    color: $dim_fg_color;
    &:ltr { padding-left: 6px; }
    &:rtl { padding-right: 6px; }

    > .event-time {
      @include fontscaling($ref_size * 0.9);
      color: $dim_fg_color;
    }

    > StIcon { icon-size: 16px; }
  }

  &-title {
    @include fontscaling($ref_size * 1.1);
    padding: 0 0 4px;
    font-weight: 700;
  }

  &-content {
    @include fontscaling($ref_size * 0.9);
    padding: 0 8px 4px;

    * > StIcon {
      padding: 2px;
      border-radius: 100px;
      icon-size: 1.09em;
      color: $secondary_accent_label_color;
    }

    // FIXME: how do you do this in sass?
    *:hover > StIcon,
    *:focus > StIcon {
      color: $accent_label_color;
      background-color: $accent_fill_color;
    }
    *:active > StIcon {
      color: $accent_label_color;
      background-color: $accent_active_fill_color;
    }
  }
}

.message-media-control {
  padding: 0 8px;
  margin: 0 6px;
  border-radius: 100px;
  color: $secondary_accent_label_color;
  background: transparent;
  background-size: 32px 32px;
  &:hover {
    color: $accent_label_color;
    background-image: url("assets/media-control-hover.svg");
    background-size: 32px 32px;
  }
  &:active {
    color: $accent_label_color;
    background-image: url("assets/media-control-active.svg");
    background-size: 32px 32px;
  }
  &:insensitive {
    color: $insensitive_accent_label_color;
    background-image: none;
    background: transparent;
  }
}

.media-message-cover-icon {
  icon-size: 32px;

  &.fallback {
    icon-size: 16px;
    padding: 8px;
    border: none;
    border-radius: 2px;
    color: $dim_fg_color;
    background-color: $base_color;
    box-shadow: $z-depth-1;
  }
}


// /******************************
//  * A Little Unstructured Mess *
//  ******************************/

.system-switch-user-submenu-icon {
  &.user-icon {
    icon-size: 20px;
    padding: 0 1px;
  }

  &.default-icon {
    icon-size: 16px;
    padding: 0 3px;
  }
}


// /************
//  * App Menu *
//  ************/

#appMenu {
  spinner-image: url("process-working.svg");
  padding: if($eta == 'false', 0 10px, 0 6px);

  StLabel { padding: if($eta == 'false', 0 4px 1px, 0 2px 1px); }

  .label-shadow { color: transparent; }
}

.aggregate-menu {
  min-width: 24em;

  .popup-menu-icon { padding: if($eta == 'false', 0 6px, 0 4px); }
}

.system-menu-action {
  padding: if($eta == 'false', 16px, 10px);
  border-radius: 100px;
  border: none;
  color: $secondary_accent_label_color;
  &:hover,
  &:focus {
    padding: if($eta == 'false', 16px, 10px);
    border: none;
    background-color: $accent_fill_color;
    color: $accent_label_color;
  }
  &:active {
    color: $accent_label_color;
    background-color: $accent_active_fill_color;
  }

  > StIcon { icon-size: 16px; }
}


// /*************************
//  * OpenWeather Extension *
//  *************************/

// FIXME: Why devs use 'system-menu-action' class? wrong place...
.openweather-button,
.openweather-menu-button-container,
.openweather-button-box,
.openweather-provider {
  color: $secondary_fg_color;
  &:hover {
    color: $fg_color;
    background-color: $semi_fill_color;

    > StIcon { color: $fg_color; }
  }
  &:active,
  &:focus {
    color: $fg_color;
    background-color: $fill_color;

    > StIcon { color: $fg_color; }
  }

  > StIcon,
  > StLabel { color: $secondary_fg_color; }
}

.openweather-current {
  &-icon,
  &-summary,
  &-summarybox { color: $fg_color; }

  &-databox-values { color: $dim_fg_color; }

  &-databox-captions { color: $dim_fg_color; }
}

.openweather-forecast {
  &-icon,
  &-summary { color: $secondary_fg_color; }

  &-day,
  &-temperature { color: $dim_fg_color; }
}

.openweather-sunrise-icon,
.openweather-sunset-icon,
.openweather-build-icon {
  color: $secondary_fg_color;
}


// /**********************
//  * Activities Ripples *
//  **********************/

.ripple-box {
  width: 52px;
  height: 52px;
  background-image: url("assets/corner-ripple-ltr.svg");
  background-size: contain;

  &:rtl { background-image: url("assets/corner-ripple-rtl.svg"); }
}

// not really top bar only
.popup-menu {
  &-arrow {
    width: 16px;
    height: 16px;
  }

  &-icon { icon-size: 14px; }
}

// close buttons
.window-close {
  height: 32px;
  width: 32px;
  -shell-close-overlap: 24px;
  -st-background-image-shadow: $z-depth-1;
  background-image: url("assets/window-close.svg");
  background-size: 32px;
  &:hover {
    background-image: url("assets/window-close-hover.svg");
    -st-background-image-shadow: $z-depth-2;
  }
  &:active { background-image: url("assets/window-close-active.svg"); }

  &:rtl {
    -st-background-image-shadow: $z-depth-1;
    &:hover {
      -st-background-image-shadow: $z-depth-2;
    }
  }
}
/* ... */

